@@ -1,3 +1,7 @@
+Sun Dec 26 18:09:45 2004  John-Mark Bell <jmb202@ecs.soton.ac.uk>
+
+	* source/sys/_swi.s: Clean implementation of this file.
+
 Wed Dec 22 23:32:12 2004  John Tytgat  <John.Tytgat@aaug.net>
 
 	* source/strsignal.c (strsignal): Add the RISC OS error string to the
